resize planet to hopefully stop overflowing name div

--- a/app/assets/stylesheets/planets.scss
+++ b/app/assets/stylesheets/planets.scss
@@ -23,8 +23,8 @@
       .planet_image {
 
         #planet_image {
-          height: 600px;
-          width: 600px;
+          height: 550px;
+          width: 550px;
         }
 
       }
